syntax = "proto3";

option go_package = "github.com/dillonkmcquade/gostore/internal/pb";

service GoStore {
  rpc Write(WriteRequest) returns (WriteReply) {};
  rpc Read(ReadRequest) returns (Record) {};
  rpc Update(WriteRequest) returns (WriteReply) {};
  rpc Delete(ReadRequest) returns (WriteReply) {};
}

message WriteRequest {
  string key = 1;
  bytes payload = 2;
  string type = 3;
}

message WriteReply {
  bool status = 1;
  string message = 2;
}

message ReadRequest { string key = 1; }

message Record {
  bytes payload = 1;
  // A string representation of the type, will map to enum Type
  string type = 2;
}

enum Type {
  STRING = 0;
  INTEGER = 1;
  BYTES = 2;
  BOOL = 3;
}
